# docs/swagger.json
@@ -413,6 +413,34 @@
                     }
                 }
             }
+        },
+        "/zeus/feed/{group_id}": {
+            "get": {
+                "description": "Get Zeus ICS feed",
+                "tags": [
+                    "zeus"
+                ],
+                "summary": "Get Zeus ICS feed",
+                "parameters": [
+                    {
+                        "description": "group_id",
+                        "name": "group_id",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "406": {
+                        "description": "Not acceptable"
+                    }
+                }
+            }
         }
     },
     "definitions": {
